...
                selectedLocation?.let {
                  onLocationPicked(it)
                }
                onDismiss()
              }
            ) {
              Text("चुनें")
            }
          }
        )
        Box(modifier = Modifier.fillMaxWidth().fillMaxHeight()) {
          println("current location: $location")
          if (location != null) {
...
    </head>
    <body>
        <div id="loading"><div class="spinner"></div></div>
        <div id="map"></div>
        <div class="center-marker"></div>
        <div id="search-container">
            <input type="text" id="search-input" placeholder="स्थान खोजें..." />
            <div id="search-results"></div>
        </div>
        <!-- Leaflet JS -->
        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
        
        <script>
...
