...

    // FAB for authenticated users
    if (isLoggedIn) {
      FloatingActionButton(
        onClick = { onNavigateToCreateOrganisation(uiState.paginationState.items.size + 1) },
        modifier = Modifier.align(Alignment.BottomEnd).padding(16.dp)
          .semantics { contentDescription = "create_activity_fab" }.testTag("create_activity_fab")
      ) {
        WithTooltip("नयी गतिविधी बनायें") {
          Icon(
            Icons.Default.Add,
            contentDescription = "create_activity_fab",
            modifier = Modifier.padding(16.dp)
          )
        }
...
